; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_GetHostIPAddressListHash.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_GetHostIPAddressListHash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }

@SHA1_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"test\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @GetHostIPAddressListHash() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca [128 x i8], align 16
  %9 = call %struct.TYPE_5__* (...) @NewBuf()
  store %struct.TYPE_5__* %9, %struct.TYPE_5__** %3, align 8
  %10 = load i32, i32* @SHA1_SIZE, align 4
  %11 = zext i32 %10 to i64
  %12 = call i8* @llvm.stacksave()
  store i8* %12, i8** %4, align 8
  %13 = alloca i32, i64 %11, align 16
  store i64 %11, i64* %5, align 8
  store i32 0, i32* %6, align 4
  %14 = call i32* (...) @GetHostIPAddressList()
  store i32* %14, i32** %2, align 8
  %15 = load i32*, i32** %2, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %41

17:                                               ; preds = %0
  store i64 0, i64* %1, align 8
  br label %18

18:                                               ; preds = %35, %17
  %19 = load i64, i64* %1, align 8
  %20 = load i32*, i32** %2, align 8
  %21 = call i64 @LIST_NUM(i32* %20)
  %22 = icmp slt i64 %19, %21
  br i1 %22, label %23, label %38

23:                                               ; preds = %18
  %24 = load i32*, i32** %2, align 8
  %25 = load i64, i64* %1, align 8
  %26 = call i32* @LIST_DATA(i32* %24, i64 %25)
  store i32* %26, i32** %7, align 8
  %27 = getelementptr inbounds [128 x i8], [128 x i8]* %8, i64 0, i64 0
  %28 = call i32 @Zero(i8* %27, i32 128)
  %29 = getelementptr inbounds [128 x i8], [128 x i8]* %8, i64 0, i64 0
  %30 = load i32*, i32** %7, align 8
  %31 = call i32 @IPToStr(i8* %29, i32 128, i32* %30)
  %32 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %33 = getelementptr inbounds [128 x i8], [128 x i8]* %8, i64 0, i64 0
  %34 = call i32 @WriteBufStr(%struct.TYPE_5__* %32, i8* %33)
  br label %35

35:                                               ; preds = %23
  %36 = load i64, i64* %1, align 8
  %37 = add nsw i64 %36, 1
  store i64 %37, i64* %1, align 8
  br label %18

38:                                               ; preds = %18
  %39 = load i32*, i32** %2, align 8
  %40 = call i32 @FreeHostIPAddressList(i32* %39)
  br label %41

41:                                               ; preds = %38, %0
  %42 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %43 = call i32 @WriteBufStr(%struct.TYPE_5__* %42, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %44 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %45 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %44, i32 0, i32 1
  %46 = load i32, i32* %45, align 4
  %47 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %48 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %47, i32 0, i32 0
  %49 = load i32, i32* %48, align 4
  %50 = call i32 @Sha1(i32* %13, i32 %46, i32 %49)
  %51 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %52 = call i32 @FreeBuf(%struct.TYPE_5__* %51)
  %53 = call i32 @Copy(i32* %6, i32* %13, i32 4)
  %54 = load i32, i32* %6, align 4
  %55 = call i32 @Endian64(i32 %54)
  store i32 %55, i32* %6, align 4
  %56 = load i32, i32* %6, align 4
  %57 = load i8*, i8** %4, align 8
  call void @llvm.stackrestore(i8* %57)
  ret i32 %56
}

declare dso_local %struct.TYPE_5__* @NewBuf(...) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i32* @GetHostIPAddressList(...) #1

declare dso_local i64 @LIST_NUM(i32*) #1

declare dso_local i32* @LIST_DATA(i32*, i64) #1

declare dso_local i32 @Zero(i8*, i32) #1

declare dso_local i32 @IPToStr(i8*, i32, i32*) #1

declare dso_local i32 @WriteBufStr(%struct.TYPE_5__*, i8*) #1

declare dso_local i32 @FreeHostIPAddressList(i32*) #1

declare dso_local i32 @Sha1(i32*, i32, i32) #1

declare dso_local i32 @FreeBuf(%struct.TYPE_5__*) #1

declare dso_local i32 @Copy(i32*, i32*, i32) #1

declare dso_local i32 @Endian64(i32) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
